# quant-learn

./: .gitignore  README.md  bs_prices.h  gpu_check.py  interval_bisection.h  pyproject.toml  quantization_test.py  template_example.cpp
DL_accelerate/: gpu_check.py  nnq.py  pq.py  pruning.py  quantization.py  quantization_test.py
DL_accelerate/sample_images/: Image-14.dcm  Image-17.dcm
HFT/: pruning.py
algotrading/: paperalgo.py  stat_arb.py
machine-learning/: crossvals.py  linreg_from_scratch.py  linreg_test.py  purged_time_series_crossval.py
machine-learning/dimension_reduction/: pca.py
machine-learning/linear/: linreg.py  linreg_from_scratch.py  linreg_test.py  logisticReg.py  perceptron.py
machine-learning/markov_models/: bayesianMCMC.py  hiddenmarkov.py  markov_switch.ipynb  markov_switch.py  markov_switch_test.ipynb
neural_nets/: deconvolution.py  nn.py  ppr.py
notebooks/: markov_switch_test.ipynb
portfolio/: no_of_defaults.hpp  sharpe_delta_hedging.cpp  sharpe_delta_hedging.hpp  stochastic_control_model.py
portfolio/price_models/: stoch_vol_jump.hpp
pricers/: CRRoption.cpp  CRRoption.h  binmodmain.cpp  binomial.cpp  binomial.h  cliquet.py  contracts.py
pricers/bonds/: annual_treasury.hpp
pricers/option/: CRRoption.cpp
pricers/options/: CRRoption.cpp  CRRoption.h  (+6 more)
rates/: terms.py  test_cubic.py
sample_images/: Image-15.dcm  Image-16.dcm
tests/: test_attention.py
time-series/: lognormal_randomwalk.py  normality_tests.py
trees/: decision_tree.py
volatility/: deep_learn_vol.py  garch.h  garch1.py  log_normal_mixture.py
(+32 files in other folders)
